# swipely_contract

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
escrow_contract/: Cargo.toml
escrow_contract/src/: lib.rs
escrow_contract/tests/: benchmarks.rs  escrow_contract.test.rs
soroban/: Cargo.toml  TRUSTED_SOURCE_IMPLEMENTATION.md  TRUSTED_SOURCE_QUICK_REFERENCE.md  VERSION_MIGRATION_POLICY.md
soroban/docs/: API_REFERENCE.md  ERRORS.md  TRUSTED_SOURCE_REGISTRY.md
soroban/src/: acl.rs  alert_system.rs  analytics_aggregator.rs  asset_deprecation.rs  asset_ranking.rs  asset_registry.rs  batch_query.rs  bridge_reserve_verifier.rs  circuit_breaker.rs  emergency_fund_recovery.rs  escrow_contract.rs  fee_distribution.rs  governance.rs  insurance_pool.rs  lib.rs  liquidity_pool.rs  migration.rs  multisig_treasury.rs  operator_rotation.rs  rate_limiter.rs  reputation_system.rs  rollup_flush.rs  sidecar_state.rs  source_blessing.rs  source_priority.rs  source_trust.rs  state_export.rs  submission_replay.rs  threshold_window.rs  version_migration_helper.rs
soroban/src/relay/: events.rs  mod.rs
soroban/test_snapshots/tests/: test_register_and_get_assets.1.json  test_submit_and_get_health.1.json
soroban/tests/: asset_locking.test.rs  benchmarks.rs  emergency_fund_recovery_tests.rs  escrow_contract.test.rs  governance.test.rs  insurance_pool.test.rs  operator_rotation.test.rs  relay_contract_fuzz.rs  relay_contract_integration.rs  source_trust.test.rs  threshold_window.test.rs  version_migration_tests.rs
transfer_state_machine/: Cargo.toml
transfer_state_machine/src/: lib.rs
transfer_state_machine/test_snapshots/tests/: test_admin_override_from_timed_out.1.json  test_advance_invalid_transition_panics.1.json  test_advance_to_failed.1.json  test_bridge_type_variants_used.1.json  test_fast_track_initiated_to_escrow_pending.1.json  test_get_timeout_for_state.1.json  test_get_transfer_unknown_returns_none.1.json  test_handle_timeout.1.json  test_handle_timeout_premature_panics.1.json  test_history_log_order.1.json  test_initiate_and_verify_happy_path_edges.1.json  test_oracle_fail_stops_auto_complete.1.json  test_rollback_by_initiator.1.json  test_rollback_stranger_panics.1.json  test_set_state_timeout_affects_future_deadline.1.json  test_standard_cannot_skip_awaiting_source.1.json  test_submit_oracle_wrong_caller.1.json  test_submit_verification_wrong_caller.1.json  test_verifier_wrong_state_panics.1.json  test_verify_transition_false_when_wrong_current.1.json
