[package]
name = "bridge-watch-contracts"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contracts for Stellar Bridge Watch on-chain monitoring"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22.0.10" }

[dev-dependencies]
soroban-sdk = { version = "22.0.10", features = ["testutils"] }
