[package]
name = "transfer-state-machine"
version = "0.1.0"
edition = "2021"
description = "Soroban state machine for bridge transfer lifecycle (Bridge Watch)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7.1" }

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }
